Fixed styling of nav menu on mobile

--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -77,7 +77,7 @@
   text-decoration: underline;
 }
 
-.followIcon {
+.followIcon svg {
   width: 24px;
   height: 24px;
 }
